@@ -4,6 +4,8 @@ import kodanect.common.exception.CommentNotFoundException;
 import kodanect.common.exception.RecipientInvalidDataException;
 import kodanect.common.exception.InvalidPasscodeException;
 import kodanect.common.exception.RecipientNotFoundException;
+import kodanect.common.util.HcaptchaService;
+import kodanect.domain.recipient.dto.RecipientCommentRequestDto;
 import kodanect.domain.recipient.dto.RecipientCommentResponseDto;
 import kodanect.domain.recipient.entity.RecipientCommentEntity;
 import kodanect.domain.recipient.entity.RecipientEntity;
@@ -19,19 +21,24 @@ import org.springframework.stereotype.Service;
 
 import javax.annotation.Resource;
 import java.util.List;
-import java.util.Optional;
 
 @Service("recipientCommentService")
 @RequiredArgsConstructor // final 필드에 대한 생성자 주입
 public class RecipientCommentServiceImpl implements RecipientCommentService {
 
+    // 비밀번호 영숫자 8자 이상
+    private static final String COMMENT_PASSCODE_PATTERN = "^(?=.*[a-zA-Z])(?=.*[0-9]).{8,}$";
+    // 중복되는 에러 메시지
+    private static final String COMMENT_NOT_FOUND_MESSAGE = "댓글을 찾을 수 없거나 이미 삭제되었습니다.";
+    // 캡차 에러 메시지
+    private static final String CAPTCHA_FAILED_MESSAGE = "캡차 인증에 실패했습니다. 다시 시도해주세요.";
+
     @Resource(name = "recipientCommentRepository")
     private final RecipientCommentRepository recipientCommentRepository;
     private final RecipientRepository recipientRepository;
+    private final HcaptchaService hcaptchaService;
 
     private final Logger logger = LoggerFactory.getLogger(RecipientCommentServiceImpl.class); // 로거 선언
-    // 비밀번호 영숫자 8자 이상
-    private final String COMMENT_PASSCODE_PATTERN = "^(?=.*[a-zA-Z])(?=.*[0-9]).{8,}$";
 
     // 게시물 삭제 여부를 확인하는 헬퍼 메서드
     private RecipientEntity getActiveRecipient(Integer letterSeq) {
@@ -50,131 +57,120 @@ public class RecipientCommentServiceImpl implements RecipientCommentService {
         getActiveRecipient(letterSeq);
 
         // 2. 삭제되지 않은 댓글만 조회하고, 작성시간 기준 오름차순으로 정렬
-        List<RecipientCommentEntity> comments = recipientCommentRepository.findByLetterLetterSeqAndDelFlagOrderByWriteTimeAsc(letterSeq, "N"); // "N"으로 비교
+        List<RecipientCommentEntity> comments = recipientCommentRepository.findByLetterSeqAndDelFlagOrderByWriteTimeAsc(letterSeq, "N"); // "N"으로 비교
 
         return comments.stream()
                 .map(RecipientCommentResponseDto::fromEntity) // Entity를 Response DTO로 변환
-                .collect(java.util.stream.Collectors.toList());
+                .toList();
     }
 
     // 댓글 작성
     @Override
-    public RecipientCommentResponseDto insertComment(RecipientCommentEntity commentEntityRequest) {
-
-        // 1. 댓글을 달 게시물(RecipientVO)이 실제로 존재하는지 확인
-        Integer letterSeq = Optional.ofNullable(commentEntityRequest.getLetter())
-                .map(RecipientEntity::getLetterSeq)
-                .orElseThrow(() -> new RecipientInvalidDataException("댓글을 달 게시물 정보가 누락되었습니다."));
+    public RecipientCommentResponseDto insertComment(RecipientCommentRequestDto requestDto, String captchaToken) {
         // 로그 출력
-        logger.info("Inserting comment for letterSeq: {}", letterSeq);
+        logger.info("Inserting comment for letterSeq: {}", requestDto.getLetterSeq());
 
-        // 2. 해당 게시물이 삭제되지 않았는지 확인 (게시물 존재 여부 및 삭제 여부 동시 확인)
-        // 게시물이 없거나 삭제되었다면 RecipientNotFoundException 발생
-        RecipientEntity recipientEntity = getActiveRecipient(letterSeq);
-
-        // 3. 댓글 저장을 위한 부모레터 세팅
-        commentEntityRequest.setLetter(recipientEntity); // JPA 연관관계 설정을 위해 실제 엔티티 참조
-
-        // 4. 댓글 비밀번호 유효성 검사 (필수 입력, 영문 숫자 8자 이상)
-        if (commentEntityRequest.getCommentPasscode() == null || !commentEntityRequest.getCommentPasscode().matches(COMMENT_PASSCODE_PATTERN)) {
-            logger.warn("댓글 작성 실패: 비밀번호 유효성 검사 실패");
-            throw new RecipientInvalidDataException("비밀번호는 영문 숫자 8자 이상 이어야 합니다.");
+        // 1. hCaptcha 인증
+        if (!hcaptchaService.verifyCaptcha(captchaToken)) {
+            logger.warn("hCaptcha 인증 실패: 유효하지 않은 캡차 토큰입니다.");
+            throw new RecipientInvalidDataException(CAPTCHA_FAILED_MESSAGE);
         }
+        logger.info("hCaptcha 인증 성공. 댓글 등록 진행.");
 
-        // 5. 댓글 내용 유효성 검사 (필수 입력, HTML 필터링, 길이 제한)
-        if (commentEntityRequest.getContents() == null || commentEntityRequest.getContents().trim().isEmpty()) {
-            logger.warn("댓글 작성 실패: 내용이 비어있음");
-            throw new RecipientInvalidDataException("댓글 내용은 필수 입력 항목입니다.");
-        }
-        // Jsoup을 사용하여 댓글 내용 HTML 필터링
-        Safelist commentSafelist = Safelist.none();
-        commentSafelist.addTags("br"); // 줄바꿈 태그만 허용 (댓글에 주로 사용)
-        String cleanCommentContents = Jsoup.clean(commentEntityRequest.getContents(), commentSafelist);
-        // 필터링 후 내용이 비어있는지 다시 확인
-        if (cleanCommentContents.trim().isEmpty()) {
+        // 2. 게시물 유효성 확인 (삭제되지 않은 게시물인지)
+        RecipientEntity parentLetter = recipientRepository.findById(requestDto.getLetterSeq())
+                .filter(entity -> "N".equalsIgnoreCase(entity.getDelFlag()))
+                .orElseThrow(() -> new RecipientNotFoundException("댓글을 등록할 게시물을 찾을 수 없거나 이미 삭제되었습니다."));
+
+        // 3. HTML 태그 필터링 및 내용 검증
+        String originalContents = requestDto.getCommentContents();
+        Safelist safelist = Safelist.relaxed();
+        String cleanContents = Jsoup.clean(originalContents, safelist);
+        if (cleanContents.trim().isEmpty()) {
             logger.warn("댓글 작성 실패: 필터링 후 내용이 비어있음");
             throw new RecipientInvalidDataException("댓글 내용은 필수 입력 항목입니다. (HTML 태그 필터링 후)");
         }
-        commentEntityRequest.setContents(cleanCommentContents); // 필터링된 내용으로 설정
 
-        RecipientCommentEntity savedComment = recipientCommentRepository.save(commentEntityRequest);
-        logger.info("Comment inserted with commentSeq: {}", savedComment.getCommentSeq());
+        // 4. DTO를 Entity로 변환 (댓글 내용, 작성자, 비밀번호 설정)
+        RecipientCommentEntity commentEntity = requestDto.toEntity();
+        commentEntity.setLetterSeq(parentLetter); // 부모 게시물 엔티티 연결
+        commentEntity.setCommentContents(cleanContents.trim()); // 클린한 내용으로 설정
 
-        return RecipientCommentResponseDto.fromEntity(savedComment);    // 저장된 Entity를 Response DTO로 변환하여 반환
+        // 5. writerId는 사용하지 않을 경우, 필요하다면 여기에 null 또는 특정 값 설정
+        commentEntity.setWriterId(null); // 사용하지 않을 필드라면 null 처리
+
+        RecipientCommentEntity savedComment = recipientCommentRepository.save(commentEntity);
+        logger.info("댓글 성공적으로 등록됨: commentSeq={}", savedComment.getCommentSeq());
+        return RecipientCommentResponseDto.fromEntity(savedComment);
     }
 
     // 댓글 수정
     @Override
-    public RecipientCommentResponseDto updateComment(RecipientCommentEntity commentEntityRequest, String inputPassword) {
-        logger.info("Attempting to update commentSeq: {}", commentEntityRequest.getCommentSeq());
+    public RecipientCommentResponseDto updateComment(int commentSeq, String newContents, String newWriter, String inputPasscode, String captchaToken) {
+        logger.info("Attempting to update commentSeq: {}", commentSeq);
+
+        // hCaptcha 인증
+        if (!hcaptchaService.verifyCaptcha(captchaToken)) {
+            logger.warn("hCaptcha 인증 실패: 유효하지 않은 캡차 토큰입니다.");
+            throw new RecipientInvalidDataException(CAPTCHA_FAILED_MESSAGE);
+        }
+        logger.info("hCaptcha 인증 성공. 댓글 수정 진행.");
 
         // 1. 삭제되지 않은 기존 댓글 조회
-        RecipientCommentEntity existingComment = recipientCommentRepository.findByCommentSeqAndDelFlag(commentEntityRequest.getCommentSeq(), "N")
-                .orElseThrow(() -> new CommentNotFoundException("댓글을 찾을 수 없거나 이미 삭제되었습니다."));
+        RecipientCommentEntity existingComment = recipientCommentRepository.findByCommentSeqAndDelFlag(commentSeq, "N")
+                .orElseThrow(() -> new CommentNotFoundException(COMMENT_NOT_FOUND_MESSAGE));
 
-        // 2. 해당 댓글이 속한 게시물이 삭제되지 않았는지 확인
-        // 게시물이 없거나 삭제되었다면 RecipientNotFoundException 발생
-        getActiveRecipient(existingComment.getLetter().getLetterSeq());
-
-        // 3. 비밀번호 검증
-        if (!existingComment.getCommentPasscode().equals(inputPassword)) {
-            logger.warn("Password mismatch for commentSeq: {}", commentEntityRequest.getCommentSeq());
+        // 2. 비밀번호 검증
+        if (!existingComment.checkPasscode(inputPasscode)) {
+            logger.warn("댓글 비밀번호 불일치: commentSeq={}", commentSeq);
             throw new InvalidPasscodeException("비밀번호가 일치하지 않습니다.");
         }
 
-        // 4. 수정 필드 업데이트 및 HTML 필터링
-        String cleanContents = Jsoup.clean(commentEntityRequest.getContents(), Safelist.none().addTags("br"));
+        // 3. 입력받은 데이터로 댓글 정보 업데이트
+        // HTML 태그 필터링
+        Safelist safelist = Safelist.relaxed();
+        String cleanContents = Jsoup.clean(newContents, safelist);
         if (cleanContents.trim().isEmpty()) {
             logger.warn("댓글 수정 실패: 필터링 후 내용이 비어있음");
-            throw new RecipientInvalidDataException("수정할 댓글 내용은 필수 입력 항목입니다. (HTML 태그 필터링 후)");
+            throw new RecipientInvalidDataException("댓글 내용은 필수 입력 항목입니다. (HTML 태그 필터링 후)");
         }
-        existingComment.setContents(cleanContents);
-        existingComment.setModifierId(commentEntityRequest.getModifierId());
 
+        existingComment.setCommentContents(cleanContents.trim());
+        existingComment.setCommentWriter(newWriter); // 작성자 수정 허용
+        // existingComment.setModifierId(null); // @Transient 처리하여 DB에 저장되지 않음. 여기서는 값을 설정할 필요 없음.
+
+        // 4. 업데이트된 댓글 저장
         RecipientCommentEntity updatedComment = recipientCommentRepository.save(existingComment);
-        logger.info("Comment updated for commentSeq: {}", updatedComment.getCommentSeq());
-        return RecipientCommentResponseDto.fromEntity(updatedComment); // 업데이트된 Entity를 Response DTO로 변환
+        logger.info("댓글 성공적으로 수정됨: commentSeq={}", updatedComment.getCommentSeq());
+        return RecipientCommentResponseDto.fromEntity(updatedComment);
     }
 
     // 댓글 삭제
     @Override
-    public void deleteComment(int commentSeq, String inputPassword) {
+    public void deleteComment(Integer letterSeq, Integer commentSeq, String inputPasscode, String captchaToken) {
         logger.info("Attempting to delete commentSeq: {}", commentSeq);
 
-        // 1. 기존 댓글 조회 (삭제되지 않은 댓글만 조회)
-        RecipientCommentEntity existingComment = recipientCommentRepository.findByCommentSeqAndDelFlag(commentSeq,"N")
-                .orElseThrow(() -> new CommentNotFoundException("댓글을 찾을 수 없거나 이미 삭제되었습니다."));
+        // hCaptcha 인증
+        if (!hcaptchaService.verifyCaptcha(captchaToken)) {
+            logger.warn("hCaptcha 인증 실패: 유효하지 않은 캡차 토큰입니다.");
+            throw new RecipientInvalidDataException(CAPTCHA_FAILED_MESSAGE);
+        }
+        logger.info("hCaptcha 인증 성공. 댓글 삭제 진행.");
 
-        // 2. 해당 댓글이 속한 게시물이 삭제되지 않았는지 확인
-        // 게시물이 없거나 삭제되었다면 RecipientNotFoundException 발생
-        getActiveRecipient(existingComment.getLetter().getLetterSeq());
+        // 1. 삭제되지 않은 기존 댓글 조회
+        RecipientCommentEntity existingComment = recipientCommentRepository.findByCommentSeqAndDelFlag(commentSeq, "N")
+                .orElseThrow(() -> new CommentNotFoundException(COMMENT_NOT_FOUND_MESSAGE));
 
-        // 3. 비밀번호 검증
-        if (!existingComment.getCommentPasscode().equals(inputPassword)) {
-            logger.warn("Password mismatch for commentSeq: {}", commentSeq);
+        // 2. 비밀번호 확인
+        if (!existingComment.checkPasscode(inputPasscode)) {
+            logger.warn("댓글 삭제 실패: 비밀번호 불일치 (commentSeq={})", commentSeq);
             throw new InvalidPasscodeException("비밀번호가 일치하지 않습니다.");
         }
 
-        // 4. 논리적 삭제 (delFlag를 "Y"로 설정)
+        // 3. 댓글 소프트 삭제
         existingComment.setDelFlag("Y");
-        existingComment.setModifierId(existingComment.getCommentWriter());
-        recipientCommentRepository.save(existingComment);   // 변경된 상태 저장
-        logger.info("Comment logically deleted for commentSeq: {}, modifierId set to: {}", commentSeq, existingComment.getModifierId());
-    }
+        recipientCommentRepository.save(existingComment);
 
-    // 댓글 비밀번호 확인
-    @Override
-    public boolean verifyCommentPassword(int commentSeq, String inputPassword) {
-        logger.info("Verifying password for commentSeq: {}", commentSeq);
-        /// 1. 기존 댓글 조회 (삭제되지 않은 댓글만 조회)
-        RecipientCommentEntity existingComment = recipientCommentRepository.findByCommentSeqAndDelFlag(commentSeq, "N")
-                .orElseThrow(() -> new CommentNotFoundException("댓글을 찾을 수 없거나 이미 삭제되었습니다."));
-
-        // 2. 해당 댓글이 속한 게시물이 삭제되지 않았는지 확인
-        // 게시물이 없거나 삭제되었다면 RecipientNotFoundException 발생
-        getActiveRecipient(existingComment.getLetter().getLetterSeq()); // <-- 이 부분이 게시물 삭제 여부 확인
-
-        // 3. 비밀번호 일치 여부 반환
-        return existingComment.getCommentPasscode().equals(inputPassword);
+        logger.info("댓글 성공적으로 삭제됨: commentSeq={}", commentSeq);
     }
 }
